# HPfarsi

./: HPfarsi.py  HPfarsiREADME.md  LICENSE  pyproject.toml
.github/workflows/: publish.yml
